# repos

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  tarpaulin-report.html
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
common/repos-github/: Cargo.toml  README.md
common/repos-github/src/: client.rs  lib.rs  pull_requests.rs  repositories.rs  util.rs
docs/: plugins.md  release-process.md  release-strategy.md  test-inventory.md
docs/commands/: clone.md  init.md  ls.md  pr.md  rm.md  run.md
plugins/repos-fix/: Cargo.toml  README.md
plugins/repos-fix/src/: agent.rs  domain.rs  jira.rs  main.rs  prompt.rs  workflow.rs  workspace.rs
plugins/repos-fix/src/analysis/: dependencies.rs  index.rs  mod.rs  platform.rs  structure.rs
plugins/repos-fix/src/templates/: agent_prompt.md  cursor_prompt.md  cursorrules.md  guidelines_android.md  guidelines_angular.md  guidelines_ios.md  guidelines_java.md
plugins/repos-health/: Cargo.toml  README.md
plugins/repos-health/src/: main.rs
plugins/repos-review/: Cargo.toml  README.md
plugins/repos-review/src/: main.rs
plugins/repos-validate/: Cargo.toml  README.md
plugins/repos-validate/src/: main.rs
src/: constants.rs  git.rs  lib.rs  main.rs  plugins.rs  runner.rs  util.rs
src/commands/: base.rs  clone.rs  init.rs  ls.rs  mod.rs  pr.rs  remove.rs  run.rs  validators.rs
src/config/: builder.rs  loader.rs  mod.rs  repository.rs  validation.rs
src/git/: clone.rs  common.rs  mod.rs  pull_request.rs
src/github/: api.rs  client.rs  mod.rs  pull_requests.rs  repositories.rs  types.rs
src/utils/: exit_codes.rs  filesystem.rs  filters.rs  mod.rs  repository_discovery.rs  sanitizers.rs  validators.rs
tests/: cli_tests.rs  clone_command_tests.rs  config_builder_tests.rs  config_errors.rs  git_additional_tests.rs  git_tests.rs  github_api_comprehensive_tests.rs  github_api_extended_tests.rs  github_api_integration_tests.rs  github_api_tests.rs  github_auth_tests.rs  github_client_comprehensive_tests.rs  github_client_tests.rs  github_tests.rs  github_types_tests.rs  init_command_tests.rs  mod.rs  plugin_tests.rs  pr_command_tests.rs  remove_command_tests.rs  run_command_tests.rs  runner_additional_tests.rs  runner_comprehensive_tests.rs  runner_tests.rs  support.rs  util_tests.rs
