[package]
name = "repos"
version = "0.1.0-rc"
edition = "2024"

[lib]
name = "repos"
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "plugins/repos-health",
]

[dependencies]
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
