[package]
name = "repos-fix"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "repos-fix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.5"
regex = "1.10"
tempfile = "3.10"
html2text = "0.12"
url = "2.5"
base64 = "0.22"
minijinja = "2.0"

# Use local repos library for plugin context
repos = { path = "../../" }
