[package]
name = "repos-health"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "repos-health"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.repos]
path = "../.."
