[package]
name = "repos-validate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "repos-validate"
path = "src/main.rs"

[dependencies]
repos = { path = "../.." }
repos-github = { path = "../../common/repos-github" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "3.0"
chrono = "0.4"
